Feat: First draft of python code - lots of things hardcoded

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
@@ -81,11 +81,11 @@ router adaptive-virtual-topology
       path-selection load-balance LB-PROD-AVT-POLICY-MPLS-ONLY
    !
    profile PROD-AVT-POLICY-VIDEO
-      internet-exit policy ZSCALER-INTERNET-EXIT-2
+      internet-exit policy ZSCALER-EXIT-POLICY-2
       path-selection load-balance LB-PROD-AVT-POLICY-VIDEO
    !
    profile PROD-AVT-POLICY-VOICE
-      internet-exit policy ZSCALER-INTERNET-EXIT-1
+      internet-exit policy ZSCALER-EXIT-POLICY-1
       path-selection load-balance LB-PROD-AVT-POLICY-VOICE
    !
    vrf ATTRACTED-VRF-FROM-UPLINK
@@ -109,6 +109,20 @@ router adaptive-virtual-topology
       avt profile PROD-AVT-POLICY-VOICE id 2
       avt profile PROD-AVT-POLICY-VIDEO id 4
       avt profile PROD-AVT-POLICY-MPLS-ONLY id 5
+!
+router internet-exit
+    !
+    exit-group ZSCALER-EXIT-POLICY-1_PRI
+        local connection ZSCALER-CONN-100
+    !
+    exit-group ZSCALER-EXIT-POLICY-1_SEC
+        local connection ZSCALER-CONN-101
+    !
+    exit-group ZSCALER-EXIT-POLICY-1_TER
+        local connection ZSCALER-CONN-102
+    !
+    policy ZSCALER-EXIT-POLICY-1
+        exit-group system-default-exit-group
 !
 router path-selection
    tcp mss ceiling ipv4 ingress
@@ -181,6 +195,17 @@ router path-selection
       jitter 42
       path-group MPLS
       path-group INET priority 2
+!
+router service-insertion
+   connection ZSCALER-CONN-100
+      interface Tunnel100 primary
+      monitor connectivity host ZSTunnel100
+   connection ZSCALER-CONN-101
+      interface Tunnel101 primary
+      monitor connectivity host ZSTunnel101
+   connection ZSCALER-CONN-102
+      interface Tunnel102 primary
+      monitor connectivity host ZSTunnel102
 !
 spanning-tree mode none
 !
@@ -287,6 +312,30 @@ interface Loopback0
    no shutdown
    ip address 192.168.42.1/32
 !
+interface Tunnel100
+   mtu 1394
+   ip address 1.1.1.1/24
+   tunnel mode ipsec
+   tunnel source interface Ethernet3
+   tunnel destination 42.42.42.42
+   tunnel ipsec profile ZSCALER-IPSEC-PROFILE
+!
+interface Tunnel101
+   mtu 1394
+   ip address 1.1.1.1/24
+   tunnel mode ipsec
+   tunnel source interface Ethernet3
+   tunnel destination 42.42.42.42
+   tunnel ipsec profile ZSCALER-IPSEC-PROFILE
+!
+interface Tunnel102
+   mtu 1394
+   ip address 1.1.1.1/24
+   tunnel mode ipsec
+   tunnel source interface Ethernet3
+   tunnel destination 42.42.42.42
+   tunnel ipsec profile ZSCALER-IPSEC-PROFILE
+!
 interface Vxlan1
    description cv-pathfinder-edge_VTEP
    vxlan source-interface Dps1
@@ -340,6 +389,32 @@ application traffic recognition
    !
    field-set l4-port TCP-SRC-2
       42
+!
+monitor connectivity
+   interface set ZSTunnel100 Tunnel100
+   interface set ZSTunnel101 Tunnel101
+   interface set ZSTunnel102 Tunnel102
+   !
+   host ZSTunnel100
+      description
+      Zscaler tunnel
+      local-interfaces ZSTunnel100 address-only
+      ip 172.20.20.21/31
+      url http://TODO
+   !
+   host ZSTunnel101
+      description
+      Zscaler tunnel
+      local-interfaces ZSTunnel101 address-only
+      ip 172.20.20.21/31
+      url http://TODO
+   !
+   host ZSTunnel102
+      description
+      Zscaler tunnel
+      local-interfaces ZSTunnel102 address-only
+      ip 172.20.20.21/31
+      url http://TODO
 !
 ip routing
 ip routing vrf ATTRACTED-VRF-FROM-UPLINK
