--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
@@ -75,11 +75,11 @@ router adaptive-virtual-topology
       path-selection load-balance LB-PROD-AVT-POLICY-DEFAULT
    !
    profile PROD-AVT-POLICY-VIDEO
-      internet-exit policy ZSCALER-INTERNET-EXIT-2
+      internet-exit policy ZSCALER-EXIT-POLICY-2
       path-selection load-balance LB-PROD-AVT-POLICY-VIDEO
    !
    profile PROD-AVT-POLICY-VOICE
-      internet-exit policy ZSCALER-INTERNET-EXIT-1
+      internet-exit policy ZSCALER-EXIT-POLICY-1
       path-selection load-balance LB-PROD-AVT-POLICY-VOICE
    !
    vrf ATTRACTED-VRF-FROM-UPLINK
@@ -102,6 +102,32 @@ router adaptive-virtual-topology
       avt profile PROD-AVT-POLICY-DEFAULT id 1
       avt profile PROD-AVT-POLICY-VOICE id 2
       avt profile PROD-AVT-POLICY-VIDEO id 4
+!
+router internet-exit
+    !
+    exit-group ZSCALER-EXIT-POLICY-1_PRI
+        local connection ZSCALER-CONN-100
+    !
+    exit-group ZSCALER-EXIT-POLICY-1_SEC
+        local connection ZSCALER-CONN-101
+    !
+    exit-group ZSCALER-EXIT-POLICY-1_TER
+        local connection ZSCALER-CONN-102
+    !
+    exit-group ZSCALER-EXIT-POLICY-2_PRI
+        local connection ZSCALER-CONN-110
+    !
+    exit-group ZSCALER-EXIT-POLICY-2_SEC
+        local connection ZSCALER-CONN-111
+    !
+    exit-group ZSCALER-EXIT-POLICY-2_TER
+        local connection ZSCALER-CONN-112
+    !
+    policy ZSCALER-EXIT-POLICY-1
+        exit-group system-default-exit-group
+    !
+    policy ZSCALER-EXIT-POLICY-2
+        exit-group ZSCALER-EXIT-POLICY-2_TER
 !
 router path-selection
    tcp mss ceiling ipv4 ingress
@@ -160,6 +186,26 @@ router path-selection
       hop count lowest
       jitter 42
       path-group INET priority 2
+!
+router service-insertion
+   connection ZSCALER-CONN-100
+      interface Tunnel100 primary
+      monitor connectivity host ZSTunnel100
+   connection ZSCALER-CONN-101
+      interface Tunnel101 primary
+      monitor connectivity host ZSTunnel101
+   connection ZSCALER-CONN-102
+      interface Tunnel102 primary
+      monitor connectivity host ZSTunnel102
+   connection ZSCALER-CONN-110
+      interface Tunnel110 primary
+      monitor connectivity host ZSTunnel110
+   connection ZSCALER-CONN-111
+      interface Tunnel111 primary
+      monitor connectivity host ZSTunnel111
+   connection ZSCALER-CONN-112
+      interface Tunnel112 primary
+      monitor connectivity host ZSTunnel112
 !
 spanning-tree mode none
 !
@@ -267,6 +313,54 @@ interface Loopback0
    no shutdown
    ip address 192.168.42.2/32
 !
+interface Tunnel100
+   mtu 1394
+   ip address 1.1.1.1/24
+   tunnel mode ipsec
+   tunnel source interface Ethernet3
+   tunnel destination 42.42.42.42
+   tunnel ipsec profile ZSCALER-IPSEC-PROFILE
+!
+interface Tunnel101
+   mtu 1394
+   ip address 1.1.1.1/24
+   tunnel mode ipsec
+   tunnel source interface Ethernet3
+   tunnel destination 42.42.42.42
+   tunnel ipsec profile ZSCALER-IPSEC-PROFILE
+!
+interface Tunnel102
+   mtu 1394
+   ip address 1.1.1.1/24
+   tunnel mode ipsec
+   tunnel source interface Ethernet3
+   tunnel destination 42.42.42.42
+   tunnel ipsec profile ZSCALER-IPSEC-PROFILE
+!
+interface Tunnel110
+   mtu 1394
+   ip address 1.1.1.1/24
+   tunnel mode ipsec
+   tunnel source interface Ethernet3
+   tunnel destination 42.42.42.42
+   tunnel ipsec profile ZSCALER-IPSEC-PROFILE
+!
+interface Tunnel111
+   mtu 1394
+   ip address 1.1.1.1/24
+   tunnel mode ipsec
+   tunnel source interface Ethernet3
+   tunnel destination 42.42.42.42
+   tunnel ipsec profile ZSCALER-IPSEC-PROFILE
+!
+interface Tunnel112
+   mtu 1394
+   ip address 1.1.1.1/24
+   tunnel mode ipsec
+   tunnel source interface Ethernet3
+   tunnel destination 42.42.42.42
+   tunnel ipsec profile ZSCALER-IPSEC-PROFILE
+!
 interface Vxlan1
    description cv-pathfinder-edge1_VTEP
    vxlan source-interface Dps1
@@ -318,6 +412,56 @@ application traffic recognition
    !
    field-set l4-port TCP-SRC-2
       42
+!
+monitor connectivity
+   interface set ZSTunnel100 Tunnel100
+   interface set ZSTunnel101 Tunnel101
+   interface set ZSTunnel102 Tunnel102
+   interface set ZSTunnel110 Tunnel110
+   interface set ZSTunnel111 Tunnel111
+   interface set ZSTunnel112 Tunnel112
+   !
+   host ZSTunnel100
+      description
+      Zscaler tunnel
+      local-interfaces ZSTunnel100 address-only
+      ip 172.25.42.16/31
+      url http://TODO
+   !
+   host ZSTunnel101
+      description
+      Zscaler tunnel
+      local-interfaces ZSTunnel101 address-only
+      ip 172.25.42.16/31
+      url http://TODO
+   !
+   host ZSTunnel102
+      description
+      Zscaler tunnel
+      local-interfaces ZSTunnel102 address-only
+      ip 172.25.42.16/31
+      url http://TODO
+   !
+   host ZSTunnel110
+      description
+      Zscaler tunnel
+      local-interfaces ZSTunnel110 address-only
+      ip 172.25.42.16/31
+      url http://TODO
+   !
+   host ZSTunnel111
+      description
+      Zscaler tunnel
+      local-interfaces ZSTunnel111 address-only
+      ip 172.25.42.16/31
+      url http://TODO
+   !
+   host ZSTunnel112
+      description
+      Zscaler tunnel
+      local-interfaces ZSTunnel112 address-only
+      ip 172.25.42.16/31
+      url http://TODO
 !
 ip routing
 ip routing vrf ATTRACTED-VRF-FROM-UPLINK
