--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2B.cfg
@@ -81,11 +81,11 @@ router adaptive-virtual-topology
       path-selection load-balance LB-PROD-AVT-POLICY-MPLS-ONLY
    !
    profile PROD-AVT-POLICY-VIDEO
-      internet-exit policy ZSCALER-INTERNET-EXIT-2
+      internet-exit policy ZSCALER-EXIT-POLICY-2
       path-selection load-balance LB-PROD-AVT-POLICY-VIDEO
    !
    profile PROD-AVT-POLICY-VOICE
-      internet-exit policy ZSCALER-INTERNET-EXIT-1
+      internet-exit policy ZSCALER-EXIT-POLICY-1
       path-selection load-balance LB-PROD-AVT-POLICY-VOICE
    !
    vrf ATTRACTED-VRF-FROM-UPLINK
