--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge.yml
@@ -403,10 +403,10 @@ router_adaptive_virtual_topology:
     load_balance_policy: LB-DEFAULT-AVT-POLICY-DEFAULT
   - name: PROD-AVT-POLICY-VOICE
     load_balance_policy: LB-PROD-AVT-POLICY-VOICE
-    internet_exit_policy: ZSCALER-INTERNET-EXIT-1
+    internet_exit_policy: ZSCALER-EXIT-POLICY-1
   - name: PROD-AVT-POLICY-VIDEO
     load_balance_policy: LB-PROD-AVT-POLICY-VIDEO
-    internet_exit_policy: ZSCALER-INTERNET-EXIT-2
+    internet_exit_policy: ZSCALER-EXIT-POLICY-2
   - name: PROD-AVT-POLICY-MPLS-ONLY
     load_balance_policy: LB-PROD-AVT-POLICY-MPLS-ONLY
   - name: PROD-AVT-POLICY-DEFAULT
@@ -636,6 +636,36 @@ application_traffic_recognition:
     - name: PFX-PATHFINDERS
       prefix_values:
       - 192.168.144.1/32
+router_service_insertion:
+  enabled: true
+  connections:
+  - name: ZSCALER-CONN-100
+    tunnel_interface:
+      primary: Tunnel100
+    monitor_connectivity_host: ZSTunnel100
+  - name: ZSCALER-CONN-101
+    tunnel_interface:
+      primary: Tunnel101
+    monitor_connectivity_host: ZSTunnel101
+  - name: ZSCALER-CONN-102
+    tunnel_interface:
+      primary: Tunnel102
+    monitor_connectivity_host: ZSTunnel102
+router_internet_exit:
+  exit_groups:
+  - name: ZSCALER-EXIT-POLICY-1_PRI
+    local_connections:
+    - name: ZSCALER-CONN-100
+  - name: ZSCALER-EXIT-POLICY-1_SEC
+    local_connections:
+    - name: ZSCALER-CONN-101
+  - name: ZSCALER-EXIT-POLICY-1_TER
+    local_connections:
+    - name: ZSCALER-CONN-102
+  policies:
+  - name: ZSCALER-EXIT-POLICY-1
+    exit_groups:
+    - name: system-default-exit-group
 dps_interfaces:
 - name: Dps1
   description: DPS Interface
@@ -658,6 +688,52 @@ vxlan_interface:
         vni: 42
       - name: ATTRACTED-VRF-FROM-UPLINK
         vni: 166
+tunnel_interfaces:
+- name: Tunnel100
+  mtu: 1394
+  ip_address: 1.1.1.1/24
+  tunnel_mode: ipsec
+  source_interface: Ethernet3
+  destination: 42.42.42.42
+  ipsec_profile: ZSCALER-IPSEC-PROFILE
+- name: Tunnel101
+  mtu: 1394
+  ip_address: 1.1.1.1/24
+  tunnel_mode: ipsec
+  source_interface: Ethernet3
+  destination: 42.42.42.42
+  ipsec_profile: ZSCALER-IPSEC-PROFILE
+- name: Tunnel102
+  mtu: 1394
+  ip_address: 1.1.1.1/24
+  tunnel_mode: ipsec
+  source_interface: Ethernet3
+  destination: 42.42.42.42
+  ipsec_profile: ZSCALER-IPSEC-PROFILE
+monitor_connectivity:
+  interface_sets:
+  - name: ZSTunnel100
+    interfaces: Tunnel100
+  - name: ZSTunnel101
+    interfaces: Tunnel101
+  - name: ZSTunnel102
+    interfaces: Tunnel102
+  hosts:
+  - name: ZSTunnel100
+    description: Zscaler tunnel
+    ip: 172.20.20.21/31
+    local_interfaces: ZSTunnel100
+    url: http://TODO
+  - name: ZSTunnel101
+    description: Zscaler tunnel
+    ip: 172.20.20.21/31
+    local_interfaces: ZSTunnel101
+    url: http://TODO
+  - name: ZSTunnel102
+    description: Zscaler tunnel
+    ip: 172.20.20.21/31
+    local_interfaces: ZSTunnel102
+    url: http://TODO
 metadata:
   cv_tags:
     device_tags:
