--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/zscaler_endpoints.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/zscaler_endpoints.schema.yml
@@ -38,9 +38,13 @@ keys:
             required: true
           latitude:
             type: str
+            convert_types:
+              - int
             required: true
           longitude:
             type: str
+            convert_types:
+              - int
             required: true
       secondary:
         type: dict
