--- a/ansible_collections/arista/avd/examples/single-dc-multipod-l3ls/group_vars/POD1.yml
+++ b/ansible_collections/arista/avd/examples/single-dc-multipod-l3ls/group_vars/POD1.yml
@@ -6,20 +6,21 @@ spine:
     bgp_as: 65001
     loopback_ipv4_pool: 192.168.101.0/24
     mlag: false
-    uplink_switches: [superspine1, superspine2] # Where the leaf uplinks go
+    uplink_switches: [ dc1-ss1, dc1-ss2 ] # Where the leaf uplinks go
     uplink_ipv4_pool: 192.168.103.0/24 # For the p2p interfaces to chopped up into /31s
-    uplink_interfaces: [Ethernet7, Ethernet8] # Spine uplinks
+    uplink_interfaces: [ Ethernet1, Ethernet2 ] # Spine uplinks
+    evpn_route_servers: [ dc1-ss1, dc1-ss2 ]
   nodes:
-    - name: spine1
+    - name: dc1-spine1
       id: 11
       mgmt_ip: 192.168.0.11/24
-      uplink_switch_interfaces: [Ethernet3, Ethernet3]
-      evpn_route_servers: [superspine1, superspine2]
-    - name: spine2
+      uplink_switch_interfaces: [ Ethernet1, Ethernet1 ]
+      # evpn_route_servers: [ dc1-ss1, dc1-ss2 ]
+    - name: dc1-spine2
       id: 12
       mgmt_ip: 192.168.0.12/24
-      uplink_switch_interfaces: [Ethernet4, Ethernet4]
-      evpn_route_servers: [superspine1, superspine2]
+      uplink_switch_interfaces: [ Ethernet2, Ethernet2 ]
+      # evpn_route_servers: [ dc1-ss1, dc1-ss2 ]
 
 
 # Leaf switches. Most leafs will be l3leaf, not l2leaf.
@@ -29,10 +30,10 @@ l3leaf:
     platform: cEOS
     loopback_ipv4_pool: 192.168.101.0/24 # This is loopback0 (underlay)
     vtep_loopback_ipv4_pool: 192.168.102.0/24 # This is loopback1 (VTEP)
-    uplink_interfaces: [Ethernet3, Ethernet4] # Leaf uplinks
-    uplink_switches: [spine1, spine2] # Where the leaf uplinks go
+    uplink_interfaces: [ Ethernet1, Ethernet2 ] # Leaf uplinks
+    uplink_switches: [ dc1-spine1, dc1-spine2 ] # Where the leaf uplinks go
     uplink_ipv4_pool: 192.168.103.0/24 # For the p2p interfaces to chopped up into /31s
-    mlag_interfaces: [Ethernet1, Ethernet2] # MLAG peer link
+    mlag_interfaces: [ Ethernet3, Ethernet4 ] # MLAG peer link
     mlag_peer_ipv4_pool: 10.255.252.0/24 # MLAG peer IPs
     mlag_peer_l3_ipv4_pool: 10.255.251.0/24 # iBGP peering between MLAG peers
     virtual_router_mac_address: 00:1c:73:00:00:99 # The vMAC for the anycast gateways
@@ -44,11 +45,11 @@ l3leaf:
   node_groups:
     - group: mlag1
       nodes:
-        - name: leaf1
+        - name: dc1-leaf1a
           id: 1
           mgmt_ip: 192.168.0.21/24
-          uplink_switch_interfaces: [Ethernet3, Ethernet3]
-        - name: leaf2
+          uplink_switch_interfaces: [ Ethernet3, Ethernet3 ]
+        - name: dc1-leaf1b
           id: 2
           mgmt_ip: 192.168.0.22/24
-          uplink_switch_interfaces: [Ethernet4, Ethernet4]
+          uplink_switch_interfaces: [ Ethernet4, Ethernet4 ]
