--- a/.github/workflows/new-cvp-integration.yml
+++ b/.github/workflows/new-cvp-integration.yml
@@ -10,50 +10,18 @@ concurrency:
 
 jobs:
   # ----------------------------------- #
-  # Test Requirements
-  # ----------------------------------- #
-  python_requirements:
-    name: Test Python requirements installation
-    runs-on: ubuntu-latest
-    # needs: [ pre_commit ]
-    # if: needs.file-changes.outputs.requirements == 'true'
-    strategy:
-      fail-fast: true
-      matrix:
-        python_version: [ "3.9", "3.10", "3.11", "3.12" ]
-    steps:
-      - name: 'Set environment variables'
-        run: |
-          echo "PY_COLORS=1" >> $GITHUB_ENV
-          echo "ANSIBLE_FORCE_COLOR=1" >> $GITHUB_ENV
-      - uses: actions/checkout@v3
-      - name: Set up Python 3
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python_version }}
-      - name: 'Install Python requirements'
-        run: |
-          pip install -r ansible_collections/arista/avd/requirements.txt -r ansible_collections/arista/avd/requirements-dev.txt --upgrade
-
-  # ----------------------------------- #
   # DEPLOY_TO_CV MOLECULE
   # ----------------------------------- #
-  molecule_deploy_to_cv:
+  molecule_cv_workflow:
     name: Run molecule test for new cvp integration
     runs-on: ubuntu-latest
     strategy:
       fail-fast: true
       matrix:
         avd_scenario:
-          - 'deploy_to_cv'
+          - 'cv_workflow'
         ansible_version:
           - 'ansible-core<2.17.0 --upgrade'
-        # Also test minimum ansible version for one scenario.
-        # include:
-        #   - avd_scenario: 'eos_cli_config_gen'
-        #     ansible_version: 'ansible-core==2.14.0'
-    # needs: [ pre_commit ]
-    # if: needs.file-changes.outputs.config_gen == 'true'
     steps:
       - name: 'Set environment variables'
         run: |
@@ -73,7 +41,3 @@ jobs:
           ansible: ${{ matrix.ansible_version }}
           check_git: true
           check_git_enforced: true
-      # - uses: actions/upload-artifact@v3
-      #   with:
-      #     name: molecule-${{ matrix.avd_scenario }}-artifacts
-      #     path: ${PWD}/ansible_collections/arista/avd/molecule/${{ matrix.avd_scenario }}
