--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -3394,14 +3394,12 @@ keys:
               valid_values:
               - enter
               - exit
-            bgp:
-              description: Trigger condition occurs on maintenance operation of specified
-                BGP peer.
-              type: dict
-              keys:
-                peer:
-                  type: str
-                  description: Ipv4/Ipv6 address or peer group name.
+            bgp_peer:
+              description: 'Ipv4/Ipv6 address or peer group name.
+
+                Trigger condition occurs on maintenance operation of specified BGP
+                peer.'
+              type: str
             action:
               type: str
               required: true
